# TelegramReminderBot

./: .env.example  .gitignore  README.md  b.py  config.py  pyproject.toml  requirements.txt
bot/: __init__.py  config.py  main.py
bot/database/: crud.py  db.py  models.py
bot/handlers/: __init__.py  help.py  reminders.py  start.py
bot/keyboards/: __init__.py  inline.py
bot/middlewares/: __init__.py  db_middleware.py
bot/scheduler/: __init__.py  jobs.py
tests/: conftest.py
tests/integration/: __init__.py  test_handlers.py
tests/unit/: __init__.py  test_config.py  test_crud.py  test_keyboards.py  test_models.py
