# ============================================================
# Конфигурация проекта (PEP 517/518)
# Альтернатива requirements.txt — современный стандарт Python
# ============================================================

[build-system]
# Используем setuptools как систему сборки
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
# Название пакета
name = "telegram-reminder-bot"
# Версия проекта (следуем Semantic Versioning: MAJOR.MINOR.PATCH)
version = "1.0.0"
# Краткое описание
description = "Telegram-бот для создания и управления персональными напоминаниями"
# Минимальная версия Python
requires-python = ">=3.11"
# Лицензия
license = { text = "MIT" }

# Основные зависимости проекта
dependencies = [
    "aiogram==3.13.1",        # Асинхронный Telegram Bot API фреймворк
    "aiosqlite==0.20.0",      # Асинхронный доступ к SQLite
    "apscheduler==3.10.4",    # Планировщик задач для напоминаний
    "python-dotenv==1.0.1",   # Загрузка переменных окружения из .env
    "pytz==2024.2",           # Работа с часовыми поясами
    "pydantic==2.10.3",       # Валидация и конфигурация через модели
    "pydantic-settings==2.7.0",  # Настройки приложения через Pydantic
]

[project.optional-dependencies]
# Зависимости только для разработки и тестирования
dev = [
    "pytest==8.3.4",          # Основной фреймворк тестирования
    "pytest-asyncio==0.24.0", # Поддержка async/await в тестах
    "pytest-mock==3.14.0",    # Удобное мокирование в тестах
    "pytest-cov==6.0.0",      # Отчёт о покрытии кода тестами
]

[project.scripts]
# Команда запуска бота из командной строки после установки пакета
reminder-bot = "bot.main:main"

# ============================================================
# Настройки инструментов разработки
# ============================================================

[tool.pytest.ini_options]
# Директория с тестами
testpaths = ["tests"]
# Режим asyncio: auto — все async-функции автоматически становятся тестами
asyncio_mode = "auto"
# Показывать подробный вывод
addopts = "-v --tb=short"

[tool.coverage.run]
# Измерять покрытие только для пакета bot
source = ["bot"]
# Исключить файлы из замера покрытия
omit = ["bot/main.py"]

[tool.coverage.report]
# Минимально допустимое покрытие кода (в процентах)
fail_under = 70
# Показывать строки без покрытия
show_missing = true
